styles/contacts.css
/* ... */
.dialog__blue-line {
  width: 5rem;
  border: 1px solid #29abe2;
  margin-top: -1em;
}

.dialog__editLeftSide h2,
.dialog__createLeftSide h2 {
  font-size: 3rem;
  margin: 0;
  font-weight: 700;
}

.dialog__editLeftSide img,
.dialog__createLeftSide img {
  object-fit: cover;
  width: 50px;
}

.dialog__editRightSide,
.dialog__createRightSide {
  background-color: white;
  position: relative;
  width: 60%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}

.dialog__editRightForm,
.dialog__createRightForm {
  display: flex;
  width: 60%;
  flex-direction: column;
  gap: 2em;
}

.dialog__editInput,
.dialog__createInput {
  border-radius: 10px;
  border: 1px solid lightgray;
  width: 100%;
  padding: 13px 21px;
  background-repeat: no-repeat;
  background-size: 20px;
  background-position-x: 90%;
  background-position-y: center;
}

.dialog__editInput:focus,
.dialog__createInput:focus {
  outline: 1px solid #007cee;
}

.dialog__editInput::placeholder,
.dialog__createInput::placeholder {
  opacity: 0.2;
}

#dialog__editNameInput,
#dialog__createNameInput {
  background-image: url(../img/person.svg);
}

#dialog__editEmailInput,
#dialog__createEmailInput {
  background-image: url(../img/mail.svg);
}

#dialog__editPhoneInput,
#dialog__createPhoneInput {
  background-image: url(../img/call.svg);
}

.dialog__editRightBtn,
.dialog__createRightBtn {
  display: flex;
  justify-content: flex-end;
  gap: 3em;
}

.custom-btn-white {
  display: flex;
  padding: 15px 15px;
  line-height: 0;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: #2a3647;
  border-radius: 10px;
  border: 1px solid #2a3647;
  background-color: white;
}

.btn-hover:hover {
  border: 1px solid #007cee;
  color: #007cee;
  -webkit-box-shadow: 0px 3px 15px -2px rgba(0, 0, 0, 0.14);
  box-shadow: 0px 3px 15px -2px rgba(0, 0, 0, 0.14);
  transition: 125ms ease-in-out;
}

.btn-save:hover {
  background-color: #007cee;
  color: white;
}

#dialog__editClose,
#dialog__createClose {
  position: absolute;
  top: 1em;
  cursor: pointer;
  right: 1em;
}

.dialog__circle {
  width: 100px !important;
  height: 100px !important;
  font-size: 2.25rem;
}

.show-edit-dialog {
  animation: showEditDialog 1s ease-in-out forwards;
}

.custom-btn {
  display: flex;
  height: 55px;
  z-index: 15;
  padding: 18px 15px;
  justify-content: center;
  align-items: center;
  gap: 10px;
  color: var(--white, #fff);
  border-radius: 10px;
  border: unset;
  background-color: #2a3647;
  transition: 75ms ease-in-out;
}

.custom-btn:hover {
  background-color: #29abe2;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
  transition: 75ms ease-in-out;
}

.custom-style-contacts {
  height: 100vh;
  display: flex;
  margin-left: 232px;
  padding-bottom: 50px;
  background-color: rgba(246, 247, 248, 255);
}

.custom-btn-container {
  display: flex;
  justify-content: flex-end;
  margin-bottom: 64px;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background: #888;
}

::-webkit-scrollbar-thumb:hover {
  background: #2a3647;
}

.contacts-header {
  display: inline-flex;
  justify-content: flex-end;
  align-items: center;
  gap: 30px;
}

.custom-fs-27 {
  font-size: 27px;
}

.custom-fs-21 {
  font-size: 21px;
}

#contactsList {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
}

#contactsListContainer {
  max-height: 100%;
  margin-top: 2px;
  width: 450px;
  padding: 32px 16px 32px 16px;
  flex-shrink: 0;
  background: var(--white, #fff);
  overflow: auto !important;
}

.initial {
  font-weight: 400;
  font-size: 21px;
}

.info p {
  color: #007cee;
}

.single-contact-card {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 360px;
  border-radius: 10px;
  padding: 15px 25px 15px 15px;
  margin: 8px;
  width: fit-content;
}

.single-contact-card:hover {
  cursor: pointer;
  background: linear-gradient(180deg, #f9f9f9 0%, #f0f0f0 100%);
}

.single-contact-card-active,
.single-contact-card-active:hover {
  background: #2a3647 !important;
  color: white !important;
}

.single-contact-card-active p {
  color: #29abe2 !important;
}

.info {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  margin-left: 35px;
  width: 250px;
}

.circle {
  border: 4px solid #fff !important;
  color: #ffffff;
  border-radius: 50%;
  width: 48px;
  height: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 1px #ffffff;
}

#contactsMain {
  padding-left: 4%;
  padding-top: 24px;
  width: 100%;
}

.pos-btn {
  width: 100%;
  margin-bottom: 20px;
}

.add-to-contacts-btn {
  display: flex;
  position: absolute;
  bottom: 10%;
  left: calc(116px + 50%);
  transform: translateX(-50%);
  width: 326px;
  height: 74px;
  align-items: center;
  justify-content: space-around;
  border-radius: 20px;
  background: #2a3647;
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
  color: white;
  z-index: 10000;
}
/*         //          OVERLAY            //        */
/* GENERAL STYLING */
.pop-up-overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(152, 255, 152, 0.8) !important;
}

.container-click-to-close {
  display: flex;
  justify-content: flex-end;
  width: 100%;
}

.custom-overlay-card {
  width: 1212px;
  height: 594px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.contacts-overlay-left {
  background-color: var(--version-2-main-color, #2a3647);
  width: 30%;
  display: inline-flex;
  padding: 66px 46px;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 12px;
  flex-shrink: 0;
}

.overlay-left {
  background-color: var(--version-2-main-color, #2a3647);
}

.contacts-overlay-right {
  background: #ffffff;
  width: 100%;
  background-color: white;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
}
/* ... */

